{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 119,
  "lineage": "2e6d996f-1df4-a37f-6b9f-0261909ea901",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "koozzi_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:loadbalancer/app/koozzi-alb/a01b8b02628ae886",
            "arn_suffix": "app/koozzi-alb/a01b8b02628ae886",
            "dns_name": "koozzi-alb-1884128724.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:loadbalancer/app/koozzi-alb/a01b8b02628ae886",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "koozzi-alb",
            "security_groups": [
              "sg-03b15fd39b667c996"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00447e4c"
              },
              {
                "subnet_id": "subnet-aad402c1"
              }
            ],
            "subnets": [
              "subnet-00447e4c",
              "subnet-aad402c1"
            ],
            "tags": {
              "Name": "koozzi-alb"
            },
            "vpc_id": "vpc-3c1bbe57",
            "zone_id": "ZWKZPGTI48KDX"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "koozzi-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:listener/app/koozzi-alb/a01b8b02628ae886/d3e49d811ae06caa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/koozzi-alb-target/5883a1ac4aafffe3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:listener/app/koozzi-alb/a01b8b02628ae886/d3e49d811ae06caa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:loadbalancer/app/koozzi-alb/a01b8b02628ae886",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.koozzi_alb",
            "aws_alb_target_group.koozzi_alb_target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "koozzi_alb_target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/koozzi-alb-target/5883a1ac4aafffe3",
            "arn_suffix": "targetgroup/koozzi-alb-target/5883a1ac4aafffe3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/koozzi-alb-target/5883a1ac4aafffe3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "koozzi-alb-target",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-3c1bbe57"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "target_attachment_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/koozzi-alb-target/5883a1ac4aafffe3-20210125172721091900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/koozzi-alb-target/5883a1ac4aafffe3",
            "target_id": "i-0c28891d4570b9ce4"
          },
          "dependencies": [
            "aws_alb_target_group.koozzi_alb_target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "target_attachment_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/koozzi-alb-target/5883a1ac4aafffe3-20210125172601999500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/koozzi-alb-target/5883a1ac4aafffe3",
            "target_id": "i-05a527a1c9f03e9f4"
          },
          "dependencies": [
            "aws_alb_target_group.koozzi_alb_target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example_ec2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e67aff698cb24c1d",
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:instance/i-0c28891d4570b9ce4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c28891d4570b9ce4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alb-study",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09d5601c313044e55",
            "private_dns": "ip-172-31-4-243.ap-northeast-2.compute.internal",
            "private_ip": "172.31.4.243",
            "public_dns": "ec2-54-180-134-178.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.134.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08695c858117d3104",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh_http_from_all"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-aad402c1",
            "tags": {
              "Name": "example-ec2-a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b15fd39b667c996"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example_ec2-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e67aff698cb24c1d",
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:instance/i-05a527a1c9f03e9f4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a527a1c9f03e9f4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alb-study",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06068fcb5f2082879",
            "private_dns": "ip-172-31-39-192.ap-northeast-2.compute.internal",
            "private_ip": "172.31.39.192",
            "public_dns": "ec2-54-180-89-71.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.89.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0956e8c6aa1e164e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh_http_from_all"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00447e4c",
            "tags": {
              "Name": "example-ec2-c"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b15fd39b667c996"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:security-group/sg-03b15fd39b667c996",
            "description": "Allow SSH and HTTP Port from all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b15fd39b667c996",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh_http_from_all",
            "name_prefix": "",
            "owner_id": "367921556108",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "koozzi-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-3c1bbe57"
          }
        }
      ]
    }
  ]
}